[package]
name = "crdt-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
loro = "1.4.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["io-std", "rt-multi-thread"] }
tower-lsp = "0.20.0"
