[package]
name = "crdt-lsp"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.96"
axum = "0.8.1"
base64 = "0.22.1"
hyper = { version = "1.6.0", features = ["full"] }
lazy_static = "1.5.0"
loro = "1.4.1"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["io-std", "rt-multi-thread"] }
tower-lsp = "0.20.0"
webrtc = "0.12.0"
